After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 732111 - Left-handed orientation doesn't rotate tablet mouse
Left-handed orientation doesn't rotate tablet mouse
Status: RESOLVED FIXED
Product: gnome-settings-daemon
Classification: Core
Component: wacom
3.12.x
Other All
: Normal normal
: ---
Assigned To: Carlos Garnacho
gnome-settings-daemon-maint
Depends on:
Blocks:
 
 
Reported: 2014-06-23 15:09 UTC by Bastien Nocera
Modified: 2014-07-02 13:45 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
common: Handle "cursor" tablet devices explicitly in GsdDeviceMapper (1.63 KB, patch)
2014-06-24 14:29 UTC, Carlos Garnacho
committed Details | Review
wacom: Make cursor devices managed by GsdDeviceMapper (1015 bytes, patch)
2014-06-24 14:29 UTC, Carlos Garnacho
committed Details | Review

Description Bastien Nocera 2014-06-23 15:09:50 UTC
When using the left-handed orientation, the mouse used on the tablet doesn't rotate 180 degrees as it should.
Comment 1 Bastien Nocera 2014-06-23 16:49:59 UTC
$ xinput list --long 18
Wacom Intuos4 6x9 cursor                	id=18	[slave  pointer  (2)]
	Reporting 8 classes:
		Class originated from: 18. Type: XIButtonClass
		Buttons supported: 9
		Button labels: None None None None None None None None None
		Button state:
		Class originated from: 18. Type: XIKeyClass
		Keycodes supported: 248
		Class originated from: 18. Type: XIValuatorClass
		Detail for Valuator 0:
		  Label: Abs X
		  Range: 0.000000 - 44704.000000
		  Resolution: 200000 units/m
		  Mode: relative
		Class originated from: 18. Type: XIValuatorClass
		Detail for Valuator 1:
		  Label: Abs Y
		  Range: 0.000000 - 27940.000000
		  Resolution: 200000 units/m
		  Mode: relative
		Class originated from: 18. Type: XIValuatorClass
		Detail for Valuator 2:
		  Label: Abs Pressure
		  Range: 0.000000 - 2048.000000
		  Resolution: 1 units/m
		  Mode: relative
		Class originated from: 18. Type: XIValuatorClass
		Detail for Valuator 3:
		  Label: Abs Rotary Z
		  Range: -900.000000 - 899.000000
		  Resolution: 1 units/m
		  Mode: relative
		Class originated from: 18. Type: XIValuatorClass
		Detail for Valuator 4:
		  Label: Abs Throttle
		  Range: -1023.000000 - 1023.000000
		  Resolution: 1 units/m
		  Mode: relative
		Class originated from: 18. Type: XIValuatorClass
		Detail for Valuator 5:
		  Label: None
		  Range: 0.000000 - 1.000000
		  Resolution: 1 units/m
		  Mode: relative
Comment 2 Carlos Garnacho 2014-06-24 14:29:12 UTC
Created attachment 279117 [details] [review]
common: Handle "cursor" tablet devices explicitly in GsdDeviceMapper

Just set the GSD_INPUT_IS_CURSOR flag on those, so the mapper is aware
if there are several of those around for mapping purposes.
Comment 3 Carlos Garnacho 2014-06-24 14:29:17 UTC
Created attachment 279118 [details] [review]
wacom: Make cursor devices managed by GsdDeviceMapper

This allows for proper mapping and left/right handed modes on those too.
Comment 4 Bastien Nocera 2014-06-26 12:02:48 UTC
Review of attachment 279117 [details] [review]:

Looks good.
Comment 5 Bastien Nocera 2014-06-26 12:03:16 UTC
Review of attachment 279118 [details] [review]:

That works as well. Please commit to master and gnome-3-12.
Comment 6 Bastien Nocera 2014-07-02 13:45:27 UTC
Pushed to gnome-3-12 and master

Attachment 279117 [details] pushed as 5a965d4 - common: Handle "cursor" tablet devices explicitly in GsdDeviceMapper
Attachment 279118 [details] pushed as 7915f68 - wacom: Make cursor devices managed by GsdDeviceMapper