common: Handle "cursor" tablet devices explicitly in GsdDeviceMapper

Just set the GSD_INPUT_IS_CURSOR flag on those, so the mapper is aware
if there are several of those around for mapping purposes.

https://bugzilla.gnome.org/show_bug.cgi?id=732111